Implement per-user settings API
